--- a/plan-my-outings/backend/.env.production.example
+++ b/plan-my-outings/backend/.env.production.example
@@ -3,23 +3,23 @@
 
 # Flask Configuration
 FLASK_ENV=production
-SECRET_KEY=your-super-secret-key-change-this-in-production
-JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production
+SECRET_KEY=plan-my-outings-secret-key-2025
+JWT_SECRET_KEY=plan-my-outings-jwt-key-2025
 
 # Database (Render will provide PostgreSQL automatically)
 # DATABASE_URL will be set automatically by Render
 
-# Email Configuration (Gmail recommended)
+# Email Configuration (Gmail)
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=true
-MAIL_USERNAME=your-gmail@gmail.com
-MAIL_PASSWORD=your-gmail-app-password
+MAIL_USERNAME=outingplanmy@gmail.com
+MAIL_PASSWORD=ckkymhmweqvrtrfz
 
 # Super Admin Configuration
 SUPER_ADMIN_USERNAME=superadmin
-SUPER_ADMIN_PASSWORD=your-secure-admin-password
-SUPER_ADMIN_EMAIL=admin@yourdomain.com
+SUPER_ADMIN_PASSWORD=SuperAdmin@2025
+SUPER_ADMIN_EMAIL=planmyouting@outlook.com
 SUPER_ADMIN_FIRST_NAME=Super
 SUPER_ADMIN_LAST_NAME=Admin
 
@@ -28,5 +28,5 @@ GOOGLE_PLACES_API_KEY=your-google-places-api-key
 TMDB_API_KEY=your-tmdb-api-key
 OPENWEATHER_API_KEY=your-openweather-api-key
 
-# CORS Origins (Update after frontend deployment)
-CORS_ORIGINS=https://your-frontend-url.vercel.app,http://localhost:3000
+# CORS Origins (Not needed for unified deployment - same domain)
+# CORS_ORIGINS=*
