--- a/plan-my-outings/render.yaml
+++ b/plan-my-outings/render.yaml
@@ -2,13 +2,8 @@ services:
   - type: web
     name: plan-my-outings
     env: python
-    buildCommand: |
-      cd frontend
-      npm install
-      npm run build
-      cd ../backend
-      pip install -r requirements.txt
-    startCommand: cd backend && gunicorn app:app
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: chmod +x start.sh && ./start.sh
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
