--- a/plan-my-outings/backend/requirements.txt
+++ b/plan-my-outings/backend/requirements.txt
@@ -10,6 +10,4 @@ werkzeug==2.3.7
 pyjwt==2.8.0
 tabulate==0.9.0
 sqlite-utils
-cryptography
-gunicorn==21.2.0
-psycopg2-binary==2.9.7; sys_platform != "win32"
+cryptography==46.0.2
